kyverno-contributor-meeting/privileged-baseline/forbidden-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: forbidden-nginx-deployment
  labels:
    app: forbidden-nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: forbidden-nginx
  template:
    metadata:
      labels:
        app: forbidden-nginx
    spec:
      containers:
      - image: nginx:1.23.1-alpine
        name: nginx
        resources: {}
        securityContext:
          seLinuxOptions:
            role: "baz"
