kyverno-contributor-meeting/privileged-baseline/forbidden-pod.yml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: nginx
  name: forbidden-nginx
spec:
  containers:
  - image: nginx:1.23.1-alpine
    name: nginx
    resources: {}
    securityContext:
      seLinuxOptions:
        role: "baz"
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
