kyverno-contributor-meeting/privileged-baseline/enforce-baseline-exclude-all-selinuxOptions-only-control-name.yml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: enforce-baseline-exclude-se-linux-options-only-control-name
spec:
  validationFailureAction: enforce
  rules:
  - name: enforce-baseline-exclude-se-linux-options-only-control-name
    match:
      any:
      - resources:
          kinds:
          - Pod
          namespaces:
          - privileged-with-kyverno
    validate:
      podSecurity:
         level: baseline
         version: v1.24
         exclude:
          - controlName: "SELinux"
