kyverno-contributor-meeting/privileged-baseline/enforce-baseline-exclude-all-selinuxOptions-with-restrictedField.yml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: enforce-baseline-exclude-se-linux-options
spec:
  validationFailureAction: enforce
  rules:
  - name: enforce-baseline-exclude-se-linux-options
    match:
      any:
      - resources:
          kinds:
          - Pod
          namespaces:
          - privileged-with-kyverno
    validate:
      podSecurity:
         level: baseline
         version: v1.24
         exclude:
          - controlName: "SELinux"
            restrictedField: spec.containers[*].securityContext.seLinuxOptions.role
            images:
              - nginx:1.23.1-alpine
            values:
              - baz
          - controlName: "SELinux"
            restrictedField: spec.initContainers[*].securityContext.seLinuxOptions.role
            images:
              - node:18-alpine3.15
            values:
              - init-bazi
